trying to make this work

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>JavaScript Quiz</title>
 </head>
 <body>
+    <header>
+
+    </header>
     
+    <footer>
+        
+    </footer>
 </body>
 </html>
