--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
 </head>
 <body>
-    <header>
+    <header class="bg-warning p-2 mb-5 sticky-top">
 <!--styled top of the webpage-->
-        <h1><span class="">WELCOME</span> to the JavaScript Quiz Game!!</h1>
+        <h1 class="text-center"><span class="fun-text">WELCOME</span> to the JavaScript Quiz Game!!</h1>
     </header>
     <div class="container-md"> <!--open the container-->
         <div class="row">
@@ -33,10 +35,11 @@
 
     </div><!--close the container-->
     
-    <footer>
+    <footer class="bg-warning pt-2 mt-auto">
 <!--Styled section at the bottom of the page-->
     <p class="text-center">JavaScript Quiz Game <br />&copy; 2021 Brad Smith</p>
     </footer>
+<script src="assets/js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
