--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     </header>
     <div class="container-md"> <!--open the container-->
         <div class="row">
-            <div class="col-12"><!--this is for the content above the dynamically generated js content-->
+            <div id="timer" class="col-12 text-center fun-text"><!--this is for the content above the dynamically generated js content-->
             <p>Place the timer in this section</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12"><!--dynamically generated content for game-->
+            <div id="game-area" class="col-12 text-center"><!--dynamically generated content for game-->
+                <button type="button" class="btn btn-primary btn-lg mb-2">Start Game</button>
                 <p>Here I will put the dynamically generated quiz game content</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12"><!--dynamically display result Correct or Wrong-->
+            <div id="result" class="col-12 text-center"><!--dynamically display result Correct or Wrong-->
                 <p>Briefly display the result of the answer: Correct or Wrong</p>
             </div>
         </div>
