added timer to page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="container-md"> <!--open the container-->
         <div class="row">
             <div id="timer" class="col-12 text-center fun-text"><!--this is for the content above the dynamically generated js content-->
-            <p>Place the timer in this section</p>
+            <p id="countdown"></p><!--timer in this element-->
             </div>
         </div>
         <div class="row">
             <div id="game-area" class="col-12 text-center"><!--dynamically generated content for game-->
-                <button type="button" class="btn btn-primary btn-lg mb-2">Start Game</button>
+                <button id="start" type="button" class="btn btn-primary btn-lg mb-2">Start Game</button>
                 <p>Here I will put the dynamically generated quiz game content</p>
             </div>
         </div>
